dist/1.0/bin/sample/retrieveUnpackaged/objects/User.object
<CustomObject>
    <fields>
        <fullName>Allow_Plan_Modifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User with this checkbox marked is allowed to edit Provisioning  Plan definition.</description>
        <inlineHelpText>User with this checkbox marked is allowed to edit Provisioning  Plan definition.</inlineHelpText>
        <label>Allow Plan Modifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Business Unit Dimension</description>
        <inlineHelpText>Business Unit Dimension</inlineHelpText>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>IS (International Services)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Country Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale Voice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default_object_owner__c</fullName>
        <description>Default object owner</description>
        <inlineHelpText>Default object owner - the field is used to indicate a default object owner for objects that are created over integration platform, and do not have a local object owner information</inlineHelpText>
        <label>Default object owner</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Global</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID used for users matching.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <description>Is to be used with GTS Location on Account for preventing users from creation of Accounts with different GTS Location than defined on User.</description>
        <inlineHelpText>Is to be used with GTS Location on Account for preventing users from creation of Accounts with different GTS Location than defined on User.</inlineHelpText>
        <label>GTS Location</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OutOfOfficeReplacement_del__c</fullName>
        <description>Select the person who replace you when you are out of office (Holiday , Sick level)</description>
        <inlineHelpText>Select the person who replace you when you are out of office (Holiday , Sick level)</inlineHelpText>
        <label>Out Of Office Replacement</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Override_Restrictions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows to override Product Configurator restrictions (visibility of Attributes and Pricing Items)</description>
        <inlineHelpText>Allows to override Product Configurator restrictions (visibility of Attributes and Pricing Items)</inlineHelpText>
        <label>Override Configurator Restrictions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCLang__c</fullName>
        <formula>TEXT(ProductCatalogueLanguage__c)</formula>
        <label>Product Catalogue Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCatalogueLanguage__c</fullName>
        <description>Indicates which language version of Product Catalogue will be used.</description>
        <inlineHelpText>Indicates which language version of Product Catalogue will be used.</inlineHelpText>
        <label>Product Catalogue Language</label>
        <picklist>
            <picklistValues>
                <fullName>GBR</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SVK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <description>Provides name of the profile to avoid SFDC governor limits wtih use of SOQL</description>
        <formula>Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <description>Provides name of the profile to avoid SFDC governor limits wtih use of SOQL</description>
        <formula>UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Code__c</fullName>
        <label>Sales Code</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Thor_Power_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines special privileges in Thor management application (see all quotas, close quotas on demand).</description>
        <inlineHelpText>Determines special privileges in Thor management application (see all quotas, close quotas on demand).</inlineHelpText>
        <label>Thor Power User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_role_id__c</fullName>
        <formula>$User.UserRoleId +  $UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User_role_id</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
        <columns>DEFAULT_CURRENCY</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>LOCALE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>HU_Active_users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GTS_Location__c</field>
            <operation>equals</operation>
            <value>GTS Hungary</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>HU Active users</label>
    </listViews>
    <listViews>
        <fullName>HU_LOCAL_ADMINS</fullName>
        <booleanFilter>1 AND ( 2 OR 3 )</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GTS_Location__c</field>
            <operation>equals</operation>
            <value>GTS Hungary</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>local_admin</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>HU_LOCAL_ADMINS</label>
    </listViews>
    <listViews>
        <fullName>Order_Entry</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Order Entry</value>
        </filters>
        <label>Order Entry</label>
    </listViews>
    <listViews>
        <fullName>Sales_Training_User</fullName>
        <booleanFilter>1 or 2 or 3 or 4 or 5 or 6 or 7 or 8 or 9 or 10</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Biskupicova,Olajec</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Kockovska</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Kucbelova</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Prochazka</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Domsitz</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Filipkova</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Cieśluk</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Boros</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Tóth</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Stanila</value>
        </filters>
        <label>Sales Training User</label>
    </listViews>
    <listViews>
        <fullName>Users_who_didn_t_login_110901</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>lessOrEqual</operation>
            <value>9/1/2011 9:00 AM</value>
        </filters>
        <label>Active didn&apos;t login since 110901</label>
        <sharedTo>
            <groups>Administrators</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Users_who_didn_t_login_last_month</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>lessOrEqual</operation>
            <value>7/1/2011 9:00 AM</value>
        </filters>
        <label>Active didn&apos;t login since 110701</label>
        <sharedTo>
            <groups>Administrators</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>my_ks_view</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>cieszkowska</value>
        </filters>
        <label>my ks view</label>
    </listViews>
    <listViews>
        <fullName>notActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
        <columns>DEFAULT_CURRENCY</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>LOCALE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>notActive Users</label>
    </listViews>
    <listViews>
        <fullName>users_CZ</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>Off-net Proc. Manager</value>
        </filters>
        <label>testi_view</label>
    </listViews>
</CustomObject>